--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,64 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+/*
+ * This is for global css usage.
+ */
+
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
+  font-family: 'Noto Sans TC', 'PingFangTC-Regular', 'Microsoft JhengHei',
+  'Roboto', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: normal;
+  outline: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body,
+input,
+select,
+textarea,
+button {
+  -webkit-font-smoothing: antialiased;
+  font-family: 'Noto Sans TC', 'PingFangTC-Regular', 'Microsoft JhengHei',
+  sans-serif;
+}
+
+body {
+  margin: 0;
+  overflow-x: hidden;
+  width: 100%;
+  background-color: #f9f7f2;
+}
+
+textarea,
+input {
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-appearance: none;
+  border-radius: 0;
+}
+
+input {
+  width: 100%;
+  border: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: normal;
+
+}
+
+a {
+  text-decoration: none;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+  padding: 0;
 }
