--- a/src/components/slot/style.css
+++ b/src/components/slot/style.css
@@ -2,7 +2,7 @@
     position: absolute;
     display: flex;
     left: 50%;
-    top: 15%;
+    top: 25%;
     transform: translate(-50%, -50%);
     font-size: 1.7em;
     z-index: 100;
@@ -11,10 +11,14 @@
 .slot {
     color: white;
     margin-right: 1em;
-    border: 4px solid white;
-    width: 4em;
-    height: 4em;
+    border: 10px solid white;
+    width: 15em;
+    height: 15em;
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.slot h1 {
+    font-size: 10em;
 }
